Remove link to developer's personal website

--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -120,5 +120,5 @@ import StackAlt from "./assets/stackalt.svg";
 
 This is an open source React components library, mainly focused on property management tools, such as booking calendars, availability calendars, etc.
 
-I hope you find this library very useful for your projects. If you want to know more about my work as a developer you can visit
+I hope you find this library very useful for your projects.
 
